--- a/sched-app/package.json
+++ b/sched-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "moment": "^2.22.2",
+    "moment-range": "^4.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-moment": "^0.7.9",
