--- a/sched-app/package.json
+++ b/sched-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "html2canvas": "^1.0.0-alpha.12",
+    "jspdf": "^1.4.1",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "react": "^16.4.1",
