--- a/sched-app/package.json
+++ b/sched-app/package.json
@@ -10,7 +10,11 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-moment": "^0.7.9",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-calendar-react": "^0.6.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0"
