--- a/sched-app/package.json
+++ b/sched-app/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "my-app",
+    "name": "my-app",
+    "homepage" : "http://users.wenglab.org/purcarom/fce",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
