--- a/sched-app/package.json
+++ b/sched-app/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "my-app",
-    "homepage" : "http://users.wenglab.org/purcarom/fce",
-
+  "name": "my-app",
+  "homepage": "http://users.wenglab.org/purcarom/fce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +9,7 @@
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "react": "^16.4.1",
+    "react-dates": "^17.1.1",
     "react-dom": "^16.4.1",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
@@ -17,7 +17,6 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-calendar-react": "^0.6.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0"
   },
