--- a/sched-app/package.json
+++ b/sched-app/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "my-app",
-    "homepage": "https://raw.githubusercontent.com/UMMS-FCE/UMMS_3rd_Year_Calendar_Generator/master/sched-app/build/",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "html2canvas": "^1.0.0-alpha.12",
-    "html2pdf.js": "^0.9.0",
-    "jspdf": "^1.4.1",
-    "moment": "^2.22.2",
-    "moment-range": "^4.0.1",
-    "react": "^16.4.1",
-    "react-dates": "^17.1.1",
-    "react-dom": "^16.4.1",
-    "react-moment": "^0.7.9",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.82.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "my-app",
+    "homepage": "https://UMMS-FCE.github.io/UMMS_3rd_Year_Calendar_Generator/",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "html2canvas": "^1.0.0-alpha.12",
+        "html2pdf.js": "^0.9.0",
+        "jspdf": "^1.4.1",
+        "moment": "^2.22.2",
+        "moment-range": "^4.0.1",
+        "react": "^16.4.1",
+        "react-dates": "^17.1.1",
+        "react-dom": "^16.4.1",
+        "react-moment": "^0.7.9",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "1.1.4",
+        "redux": "^4.0.0",
+        "redux-thunk": "^2.3.0",
+        "semantic-ui-css": "^2.3.3",
+        "semantic-ui-react": "^0.82.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "devDependencies": {
+        "gh-pages": "^1.2.0"
+    }
 }
